force-app/main/default/objects/AgentGov_Conflict_Log__c/AgentGov_Conflict_Log__c.object-meta.xml
<CustomObject>
    <description>Logs all conflicts detected between AI agents and their resolutions.</description>
    <label>Agent Conflict Log</label>
    <nameField>
        <displayFormat>CFT-{000000}</displayFormat>
        <label>Conflict Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Conflict Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>