force-app/main/default/objects/AgentGov_Conflict_Log__c/fields/Agent_1__c.field-meta.xml
<CustomField>
    <fullName>Agent_1__c</fullName>
    <label>Agent 1</label>
    <type>Lookup</type>
    <description>The first agent involved in the conflict</description>
    <referenceTo>AgentGov_Registration__c</referenceTo>
    <relationshipLabel>Conflicts as Agent 1</relationshipLabel>
    <relationshipName>Conflicts_as_Agent_1</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>