force-app/main/default/objects/AgentGov_Conflict_Log__c/fields/Agent_2__c.field-meta.xml
<CustomField>
    <fullName>Agent_2__c</fullName>
    <label>Agent 2</label>
    <type>Lookup</type>
    <description>The second agent involved in the conflict</description>
    <referenceTo>AgentGov_Registration__c</referenceTo>
    <relationshipLabel>Conflicts as Agent 2</relationshipLabel>
    <relationshipName>Conflicts_as_Agent_2</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>