force-app/main/default/objects/AgentGov_Conflict_Log__c/fields/Conflict_Type__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Type__c</fullName>
    <label>Conflict Type</label>
    <type>Picklist</type>
    <required>true</required>
    <description>The type of conflict detected</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concurrent_Write</fullName>
                <label>Concurrent Write</label>
            </value>
            <value>
                <fullName>Lock_Contention</fullName>
                <label>Lock Contention</label>
            </value>
            <value>
                <fullName>Priority_Override</fullName>
                <label>Priority Override</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>