force-app/main/default/objects/AgentGov_Conflict_Log__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Additional context about the conflict and resolution</description>
</CustomField>