force-app/main/default/objects/AgentGov_Conflict_Log__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <type>Text</type>
    <length>255</length>
    <description>API name of the Salesforce object that was contested</description>
</CustomField>