force-app/main/default/objects/AgentGov_Conflict_Log__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <type>Picklist</type>
    <required>true</required>
    <description>How the conflict was resolved</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent1_Won</fullName>
                <label>Agent1 Won</label>
            </value>
            <value>
                <fullName>Agent2_Won</fullName>
                <label>Agent2 Won</label>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>