force-app/main/default/objects/AgentGov_Conflict_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
    <description>When the conflict occurred</description>
    <required>true</required>
</CustomField>