force-app/main/default/objects/AgentGov_Conflict_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agent_1__c</columns>
    <columns>Agent_2__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Conflict_Type__c</columns>
    <columns>Resolution__c</columns>
    <columns>Severity__c</columns>
    <columns>Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>